holyc-parser/tests/corpus/passing/084-stmt-stmt-block.hc
U0 SE_blk() { { I64 a=1; } }
