holyc-parser/tests/corpus/failing/018-errors-err-invalid-lval-literal.hc
U0 ELL_f() { 5 += 1; }
